--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kinga.trasapolublinie.Navigation">
+    tools:context="com.example.kinga.trasapolublinie.NavigationActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -29,7 +29,8 @@
         android:layout_gravity="bottom|end"
         android:visibility="invisible"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#115b17"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 
 
