--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -23,14 +23,25 @@
     <include layout="@layout/content_navigation" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:visibility="invisible"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="#115b17"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        app:layout_anchor="@id/add"
+        android:visibility="invisible"
+        app:backgroundTint="#500808"
+        app:srcCompat="@android:drawable/ic_delete"/>
+
 
 
 
