--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -45,6 +45,16 @@
         app:srcCompat="@android:drawable/ic_delete"/>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        app:layout_anchor="@id/delete"
+        android:visibility="invisible"
+        app:backgroundTint="#d6c91a"
+        app:srcCompat="@android:drawable/ic_dialog_email"/>
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
