--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="#c16fa2"
+    android:background="@drawable/pattern"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textColor="#4d0436"
+        android:textColor="#c6b9c2"
         android:text="Android Studio"
         android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -35,7 +35,7 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4d0436"
+        android:textColor="#c6b9c2"
         android:layout_gravity="center"
         android:text="android.studio@android.com" />
 
