--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kinga.trasapolublinie.LoginActivity">
-
+    tools:context="com.example.kinga.trasapolublinie.LoginActivity"
+    android:background="@drawable/backround">
+ <android.support.v7.widget.Toolbar
+     android:id="@+id/toolbar"
+     android:layout_width="match_parent"
+     android:layout_height="?attr/actionBarSize"
+     android:background="?attr/colorPrimary"
+     app:popupTheme="@style/AppTheme.PopupOverlay" />
  <com.google.android.gms.common.SignInButton
      android:id="@+id/sign"
      android:layout_width="wrap_content"
