--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textColor="#c6b9c2"
+        android:textColor="#2b031f"
         android:text="Android Studio"
         android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -35,7 +35,7 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#c6b9c2"
+        android:textColor="#2b031f"
         android:layout_gravity="center"
         android:text="android.studio@android.com" />
 
